[package]
name = "fig"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
derive_more = "0.15.0"
futures = "0.1.28"
# TODO use to crates.io version when published
gloo-timers = { git = "https://github.com/rustwasm/gloo", features = ["futures"] }
js-sys = "0.3.25"
log = "0.4.8"
serde = "1.0.97"
serde_json = "1.0.40"
url = "1.7.2"
wasm-bindgen = "0.2.48"
wasm-bindgen-futures = "0.3.25"

[dependencies.web-sys]
version = "0.3.25"
features = [
  'console',
  'AbortController',
  'AbortSignal',
  'Attr',
  'Document',
  'DomException',
  'Element',
  'Event',
  'EventTarget',
  'FetchEvent',
  'Headers',
  'History',
  'HtmlAnchorElement',
  'HtmlCollection',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'InputEvent',
  'Location',
  'Node',
  'NodeList',
  'ReferrerPolicy',
  'Request',
  'RequestInit',
  'RequestCache',
  'RequestCredentials',
  'RequestMode',
  'RequestRedirect',
  'Response',
  'Storage',
  'Text',
  'Window',
]
