[package]
name = "fig"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
derive_more = "0.15.0"
futures = "0.3.1"
gloo-timers = "0.1"
js-sys = "0.3.31"
log = "0.4.8"
serde = "1.0.102"
serde_json = "1.0.41"
url = "2.1.0"
wasm-bindgen = "0.2.54"
wasm-bindgen-futures = "0.4.4"
bit-set = "0.5.1"
downcast-rs = "1.1.1"
# TODO use 0.10 once released
reqwest = { git = "https://github.com/seanmonstar/reqwest" }

[dependencies.web-sys]
version = "0.3.31"
features = [
  'console',
  'AbortController',
  'AbortSignal',
  'Attr',
  'CloseEvent',
  'Document',
  'DomException',
  'Element',
  'ErrorEvent',
  'Event',
  'EventTarget',
  'FetchEvent',
  'Headers',
  'History',
  'HtmlAnchorElement',
  'HtmlCollection',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'InputEvent',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'Node',
  'NodeList',
  'PopStateEvent',
  'ReferrerPolicy',
  'Request',
  'RequestInit',
  'RequestCache',
  'RequestCredentials',
  'RequestMode',
  'RequestRedirect',
  'Response',
  'Storage',
  'Text',
  'WebSocket',
  'Window',
]
