[package]
name = "demo"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
fig = { path = "../../" }
wasm-bindgen = "0.2.54"
web-sys = "0.3.31"
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
log = "0.4.8"
console_log = "0.1.2"
reqwest = { git = "https://github.com/seanmonstar/reqwest" }
