[package]
name = "server"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.1.4"
actix-web = "1.0.5"
serde = { version = "1.0.98", features = ["derive"] }
actix-web-actors = "1.0.2"
actix = "0.8.3"
env_logger = "0.6.2"
log = "0.4.8"
